--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
+ 
+#app {
+  width: 100vw;
+  height: 100vh;
+}
